--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/Logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>my-app</title>
+  <title>Bakchodi International</title>
+  <meta name="description" content="The official portal of Bakchodi International PVT. LTD. Managing chaos across the multiverse." />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
